--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tesseltactoe",
+  "name": "tesseltactoe-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,9 +7,13 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/jest": "^24.9.1",
+    "@types/lodash.get": "^4.4.6",
     "@types/node": "^12.12.28",
     "@types/react": "^16.9.20",
     "@types/react-dom": "^16.9.5",
+    "immutable-assign": "^2.1.4",
+    "lodash.get": "^4.4.2",
+    "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
